dr01-python-microservices6/k8s/ingress/ingress-fastapi-movie.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dm-jenkins-ingress
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
    - host: dm-jenkins.cpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-cpa-svc
                port:
                  number: 80
          - path: /api/v1/casts/
            pathType: Prefix
            backend:
              service:
                name: fastapi-cast-service
                port:
                  number: 5000
          - path: /api/v1/movies/
            pathType: Prefix
            backend:
              service:
                name: fastapi-movie-service
                port:
                  number: 5001
---
